access/engine/binding/cabi/anytty_client.h

typedef uint64_t anytty_handle_t;
typedef enum anytty_status_v1 {
  ANYTTY_STATUS_OK = 0,
  ANYTTY_STATUS_INVALID_ARGUMENT = 1,
  ANYTTY_STATUS_INVALID_HANDLE = 2,
  ANYTTY_STATUS_CLOSED = 3,
  ANYTTY_STATUS_CAPACITY = 4,
  ANYTTY_STATUS_INTERNAL = 5
} anytty_status_v1;
/* Inputs are borrowed only for the duration of the call. Event output is
 * wrapper-owned memory identified by buffer_handle and must be released once
 * with anytty_buffer_free. No returned data pointer may reference Go memory. */
typedef struct anytty_buffer_v1 {
  anytty_handle_t buffer_handle;
  const uint8_t *data;
  size_t length;
} anytty_buffer_v1;
anytty_status_v1 anytty_engine_command(anytty_handle_t engine_handle, const uint8_t *command_proto, size_t command_length, anytty_handle_t *out_operation_handle);
anytty_status_v1 anytty_engine_next_event(anytty_handle_t engine_handle, uint32_t timeout_millis, anytty_buffer_v1 *out_event_proto);
anytty_status_v1 anytty_platform_next_request(anytty_handle_t engine_handle, uint32_t timeout_millis, anytty_buffer_v1 *out_request_proto);
anytty_status_v1 anytty_platform_complete(anytty_handle_t engine_handle, const uint8_t *response_proto, size_t response_length);
anytty_status_v1 anytty_engine_cancel(anytty_handle_t engine_handle, anytty_handle_t operation_handle);
anytty_status_v1 anytty_engine_close_session(anytty_handle_t engine_handle, anytty_handle_t session_handle);
anytty_status_v1 anytty_engine_release(anytty_handle_t engine_handle, anytty_handle_t handle);
anytty_status_v1 anytty_engine_close(anytty_handle_t engine_handle);
anytty_status_v1 anytty_buffer_free(anytty_handle_t buffer_handle);