clients/flutter/lib/src/native/generated/anytty_client_bindings.dart


  late final _anytty_engine_commandPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<anytty_handle_t>,
          )
        >
      >('anytty_engine_command');
  late final _anytty_engine_command = _anytty_engine_commandPtr
      .asFunction<
        int Function(
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<anytty_handle_t>,
        )
      >();

  anytty_status_v1 anytty_engine_next_event(
    Dartanytty_handle_t engine_handle,
    int timeout_millis,
    ffi.Pointer<anytty_buffer_v1> out_event_proto,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_next_event(engine_handle, timeout_millis, out_event_proto),
    );
  }

  late final _anytty_engine_next_eventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Uint32,
            ffi.Pointer<anytty_buffer_v1>,
          )
        >
      >('anytty_engine_next_event');
  late final _anytty_engine_next_event = _anytty_engine_next_eventPtr
      .asFunction<int Function(int, int, ffi.Pointer<anytty_buffer_v1>)>();

  anytty_status_v1 anytty_platform_next_request(
    Dartanytty_handle_t engine_handle,
    int timeout_millis,
    ffi.Pointer<anytty_buffer_v1> out_request_proto,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_platform_next_request(
        engine_handle,
        timeout_millis,
        out_request_proto,
      ),
    );
  }

  late final _anytty_platform_next_requestPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Uint32,
            ffi.Pointer<anytty_buffer_v1>,
          )
        >
      >('anytty_platform_next_request');
  late final _anytty_platform_next_request = _anytty_platform_next_requestPtr
      .asFunction<int Function(int, int, ffi.Pointer<anytty_buffer_v1>)>();

  anytty_status_v1 anytty_platform_complete(
    Dartanytty_handle_t engine_handle,
    ffi.Pointer<ffi.Uint8> response_proto,
    int response_length,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_platform_complete(engine_handle, response_proto, response_length),
    );
  }

  late final _anytty_platform_completePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            anytty_handle_t,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('anytty_platform_complete');
  late final _anytty_platform_complete = _anytty_platform_completePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Uint8>, int)>();

  anytty_status_v1 anytty_engine_cancel(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t operation_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_cancel(engine_handle, operation_handle),
    );
  }

  late final _anytty_engine_cancelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(anytty_handle_t, anytty_handle_t)
        >
      >('anytty_engine_cancel');
  late final _anytty_engine_cancel = _anytty_engine_cancelPtr
      .asFunction<int Function(int, int)>();

  anytty_status_v1 anytty_engine_close_session(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t session_handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_close_session(engine_handle, session_handle),
    );
  }

  late final _anytty_engine_close_sessionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(anytty_handle_t, anytty_handle_t)
        >
      >('anytty_engine_close_session');
  late final _anytty_engine_close_session = _anytty_engine_close_sessionPtr
      .asFunction<int Function(int, int)>();

  anytty_status_v1 anytty_engine_release(
    Dartanytty_handle_t engine_handle,
    Dartanytty_handle_t handle,
  ) {
    return anytty_status_v1.fromValue(
      _anytty_engine_release(engine_handle, handle),
    );
  }

  late final _anytty_engine_releasePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(anytty_handle_t, anytty_handle_t)
        >
      >('anytty_engine_release');
  late final _anytty_engine_release = _anytty_engine_releasePtr
      .asFunction<int Function(int, int)>();

  anytty_status_v1 anytty_engine_close(Dartanytty_handle_t engine_handle) {
    return anytty_status_v1.fromValue(_anytty_engine_close(engine_handle));
  }

  late final _anytty_engine_closePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(anytty_handle_t)>>(
        'anytty_engine_close',
      );
  late final _anytty_engine_close = _anytty_engine_closePtr
      .asFunction<int Function(int)>();

  anytty_status_v1 anytty_buffer_free(Dartanytty_handle_t buffer_handle) {
    return anytty_status_v1.fromValue(_anytty_buffer_free(buffer_handle));
  }

  late final _anytty_buffer_freePtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function(anytty_handle_t)>>(
        'anytty_buffer_free',
      );
  late final _anytty_buffer_free = _anytty_buffer_freePtr
      .asFunction<int Function(int)>();
}

typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;
typedef __darwin_ct_rune_t = ffi.Int;
typedef Dart__darwin_ct_rune_t = int;

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

typedef __darwin_mbstate_t = __mbstate_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef __darwin_size_t = ffi.UnsignedLong;
typedef Dart__darwin_size_t = int;
typedef __builtin_va_list = ffi.Pointer<ffi.Char>;
typedef __darwin_va_list = __builtin_va_list;
typedef __darwin_wchar_t = ffi.Int;
typedef Dart__darwin_wchar_t = int;
typedef __darwin_rune_t = __darwin_wchar_t;
typedef __darwin_wint_t = ffi.Int;
typedef Dart__darwin_wint_t = int;
typedef __darwin_clock_t = ffi.UnsignedLong;
typedef Dart__darwin_clock_t = int;
typedef __darwin_socklen_t = __uint32_t;
typedef __darwin_ssize_t = ffi.Long;
typedef Dart__darwin_ssize_t = int;
typedef __darwin_time_t = ffi.Long;
typedef Dart__darwin_time_t = int;
typedef __darwin_blkcnt_t = __int64_t;
typedef __darwin_blksize_t = __int32_t;
typedef __darwin_dev_t = __int32_t;
typedef __darwin_fsblkcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsblkcnt_t = int;
typedef __darwin_fsfilcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsfilcnt_t = int;
typedef __darwin_gid_t = __uint32_t;
typedef __darwin_id_t = __uint32_t;
typedef __darwin_ino64_t = __uint64_t;
typedef __darwin_ino_t = __darwin_ino64_t;
typedef __darwin_mach_port_name_t = __darwin_natural_t;
typedef __darwin_mach_port_t = __darwin_mach_port_name_t;
typedef __darwin_mode_t = __uint16_t;
typedef __darwin_off_t = __int64_t;
typedef __darwin_pid_t = __int32_t;
typedef __darwin_sigset_t = __uint32_t;
typedef __darwin_suseconds_t = __int32_t;
typedef __darwin_uid_t = __uint32_t;
typedef __darwin_useconds_t = __uint32_t;

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>
  >
  __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}
